# ECG_Plotter_QT

./: LICENSE
ECG_GUI/: .gitignore  CMakeLists.txt
ECG_GUI/src/include/: mainwindow.h
ECG_GUI/src/src/: main.cpp  mainwindow.cpp  mainwindow.ui
